2009-03-24  Roland McGrath  <roland@redhat.com>

	* dwarf-print.cc: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(dwarf_print_SOURCES, dwarf_print_LDADD): New variables.

2009-01-10  Roland McGrath  <roland@redhat.com>

	* run-dwarfcmp-self.sh: Also run with -T.

	* run-dwarflint-self.sh: --no-debug -> -i

	* run-dwarfcmp-self.sh: Run both with and without -q.

2009-01-10  Petr Machata  <pmachata@redhat.com>

	* run-dwarflint-self.sh: Pass new option --no-debug to dwarflint.

2009-01-10  Roland McGrath  <roland@redhat.com>

	* run-dwarflint-self.sh: New file.
	* Makefile.am (TESTS, EXTRA_DIST) Add it.

2009-01-05  Roland McGrath  <roland@redhat.com>

	* run-dwarfcmp-self.sh: New file.
	* Makefile.am (TESTS, EXTRA_DIST) Add it.

2008-12-31  Ulrich Drepper  <drepper@redhat.com>

	* testfile44.S.bz2: Add tests for dppd, dpps, insertps, movntdqa,
	mpsadbw, packusdw, pblendvb, pblendw, pcmpeqq, pcmpestri, pcmpestrm,
	pcmpistri, pcmpistrm, pcmpgtq, phminposuw, pinsrb, pinsrd, pmaxsb,
	pmaxsd, pmaxud, pmaxuw, pminsb, pminsd, pminud, pminuw, pmovsxbw,
	pmovsxbd, pmovsxbq, pmovsxwd, pmovsxwq, pmovsxdq, pmovsxbw, pmovsxbd,
	pmovsxbq, pmovsxwd, pmovsxwq, pmovsxdq, pmuldq, pmulld, popcnt, ptest,
	roundss, roundps, roundpd, and roundsd.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

	* testfile44.S.bz2: Add tests for blendvpd and blendvps.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

2008-12-30  Ulrich Drepper  <drepper@redhat.com>

	* testfile44.S.bz2: Add tests for blendpd and blendps.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

2008-12-19  Ulrich Drepper  <drepper@redhat.com>

	* testfile44.S.bz2: Add tests for AMD 3DNOW.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.
